src/components/order/Section.css
.order-cards{
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}
.order-section-title{
  display: flex;
  flex-direction: column;
  /* width: 1100px; */
  margin-left: 65px;
  color: #451400;
}
.order-section-title>h1{
  text-transform: uppercase;
  font-size: 1.3em;
  transform: scale(1, 1.3);
  letter-spacing: 1px;
}
.order-section-title>span{
  color:#786259;
}

.order-section{
  width: 1100px;
  margin-top: 20px;
  margin-bottom: 35px;
  display: flex;
  flex-direction: column;
}

@media (max-width: 1024px) {
  .order-cards{
    flex-direction: column;
  }
  .order-card{
    border-top: none !important;
    border-left: none !important;
    border-right: none !important;
    width: 100vw !important;
    height: 100px!important;
    margin: 0 !important;
  }
  .order-cards div:last-child{
    border-bottom: none;
    /* margin-bottom: 5px; */
  }
  .order-header{
    flex-direction: column;
    border-bottom: none;
  }
  .order-section{
    width: 100vw;
    margin-bottom: 0;
    margin-top: 0;
  }
  .order-section-title{
    margin-left: 0;
    background-color: #f9f7f4;
    border-top: 1px solid #d4cbc7;
    border-bottom: 1px solid #d4cbc7;
  }
  .order-section-title>span{
    display: none;
  }
  .order-section-title>h1{
    font-size: 1em;
    letter-spacing: 0px;
    margin: 25px 20px;
  }
  .order-card>img{
    height: 180% !important;
  }
  .header-left{
    width: 250px;
    height: 200px;
  }
/* --------header-right---------- */
  .header-right{
    flex: 100%;
    margin: 0 30px;
    margin-bottom: 30px;
  }
  .header-right>h3{
    font-size: 0.8em;
  }
  .header-right>h1{
    font-size: 2em !important;
    margin-bottom: 10px ;
    font-size: 3em;
    transform: scale(1, 1.3);
  }
  .header-right>p{
    color: #451400;
    font-weight: lighter;
    line-height: 22px;
  }
  .customize-tab{
    display:none;
  }
  .hover-effect{
    background-color: rgba(0,0,0,0) !important ;
  }
}

